# zk-sampler

./: .gitignore  .gitmodules  LICENSE
frontend/: package-lock.json  package.json
frontend/audio-wasm/: Cargo.toml
frontend/audio-wasm/src/: lib.rs
frontend/src/app/: globals.css  page.tsx
frontend/src/app/api/prove/: route.ts
frontend/src/app/editor/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: AudioEditorInterface.jsx  WalletProvider.jsx
frontend/src/components/ui/: VerifyWithWallet.jsx  animated-modal.tsx  aurora-background.tsx  custom-card.tsx  evervault-card.tsx  file-upload.tsx  slider.tsx
frontend/src/lib/: contractUtils.ts  float32ToWav.ts  transformer.ts  wasm-loader.ts  wasm-tester.ts
frontend/src/lib/abis/: audioVerifier.json
frontend/verifier/proofs/: transformation.json
zk-sampler/: Cargo.toml  README.md  transform.json
zk-sampler/api/: Cargo.toml
zk-sampler/api/src/: handlers.rs  main.rs  types.rs  utils.rs
zk-sampler/lib/: Cargo.toml
zk-sampler/lib/src/: dsp.rs  lib.rs  transformations.rs
zk-sampler/program/: Cargo.toml
zk-sampler/program/src/: main.rs
zk-sampler/script/: Cargo.toml
zk-sampler/verifier/: foundry.toml
zk-sampler/verifier/script/: Deploy.s.sol  Verify.s.sol
zk-sampler/verifier/src/: AudioVerifier.sol
zk-sampler/verifier/test/: AudioVerifier.t.sol
