[package]
name = "zk-sampler-script"
version = "0.1.0"
edition = "2021"
default-run = "zk-sampler"

[[bin]]
name = "zk-sampler"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.0.0"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = "0.4.3"
tracing = "0.1.40"
dotenv = "0.15.0"
hound = { workspace = true }
zk-sampler-lib = { path = "../lib" }
anyhow = "1.0.86"

[build-dependencies]
sp1-build = "4.0.0"
